--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,14 @@
 server {
-  # server_name my-server.wade
+  server_name my-server.wade
   listen       80;
   listen  [::]:80;
-  server_name  localhost;
+  # server_name  localhost;
 
   #access_log  /var/log/nginx/host.access.log  main;
 
   location / {
-    # root   /usr/share/nginx/html;
-    root /var/www/html;
+    root   /usr/share/nginx/html;
+    # root /var/www/html;
     index  index.html index.htm;
   }
   # 以下はSSL化のチャレンジという工程で必要
